@@ -1,3 +1,6 @@
+* Fri May 27 2022 Zach Schulte <zschulte@broadinstitute.org> - 8.7.3
+- Fix the permissions on `/var/log/audit`
+
 * Fri May 13 2022 Mike Riddle <mike@sicura.us> - 8.7.2
 - Changed the auditd_sample_rulesets fact to look in both
   /usr/share/audit/sample-rules and /usr/share/doc/audit*/rules for
